<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:gravity="center_vertical"
    android:background="@drawable/bg2599646"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/congratulations"
        android:textStyle="italic"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/ResultUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/sharif"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/solveQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_have_solve_5_out_of_5_questions"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btnFinishResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/finish"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        android:backgroundTint="@color/white"

        />

</LinearLayout>