<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2599646"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/white"
         />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/BtnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/start"
                android:textSize="20sp"

                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>